# cr2xt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: build-appimage-wsl.ps1  build-dist-all.ps1  build-dist-macos.sh  build-dist-windows.ps1  cmake-build-install.sh  cmake-configure.sh  create-appimage.sh  crui-defaults.ini  dist-config-macos.json  dist-config.json  excludelist  generate-dmg-background.sh  mingw-bundledlls  remote-build-config.template.ps1  remote-build-macos.ps1
